# aoc2023

./: .aocbench.yaml  AoC2023.sln  README.md  run.sh
.docker/: Dockerfile  entrypoint.sh
Day1/: CMakeLists.txt  CMakePresets.json  Program.cs  main.c  main.cpp
Day10/: CMakeLists.txt  answers.txt  main.c
Day11/: CMakeLists.txt  answers.txt  main.c
Day12/: CMakeLists.txt  answers.txt  main.c
Day13/: CMakeLists.txt  answers.txt  main.c
Day14/: CMakeLists.txt  answers.txt  main.c
Day15/: CMakeLists.txt  main.c
Day16/: CMakeLists.txt  answers.txt  main.c
Day17/: CMakeLists.txt  astar.h  main.c
Day18/: CMakeLists.txt  answers.txt  main.c
Day19/: CMakeLists.txt  answers.txt  main.c
Day2/: CMakeLists.txt  Program.cs  main.c  main.cpp
Day20/: CMakeLists.txt  answers.txt  main.c
Day21/: CMakeLists.txt  answers.txt  main.c
Day22/: CMakeLists.txt  answers.txt  main.c  minheap.h
Day23/: CMakeLists.txt  main.c
Day24/: CMakeLists.txt  answers.txt  main.c
Day25/: CMakeLists.txt  karger.h  main.c  stoerwagner.h
Day3/: CMakeLists.txt  Program.cs  answers.txt  main.c  main.cpp
Day4/: CMakeLists.txt  Program.cs  main.c  main.cpp
Day5/: CMakeLists.txt  CMakePresets.json  answers.txt  main.c
Day6/: CMakeLists.txt  answers.txt  main.c
Day7/: CMakeLists.txt  answers.txt  main.c
Day8/: CMakeLists.txt  answers.txt  main.c
Day9/: answers.txt  main.c
common/: common.h  common.hpp  mmap.h  mmap.hpp  print.h  stopwatch.h  view.hpp  vuctor.h
